@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Fixed bug where prototypes to attach were sometimes being
+    ignored.
   - Add sub_ref method to FFI::Platypus::Function (gh#133)
   - Better file/line number diagnostics for croak inside a
     wrapper (gh#129, gh#132)
